--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -10,5 +10,6 @@
 <body>
     <header>
         <h1>SSR Editor</h1>
+        <u><a href="/createdoc">Skapa nytt dokument</a></u>
     </header>
     <main class="main" id="main">
