Added proper button text

--- a/views/includes/createdoc.ejs
+++ b/views/includes/createdoc.ejs
@@ -7,6 +7,6 @@
         <label for="content">Innehåll</label>
         <textarea name="content"></textarea>
 
-        <input type="submit" value="Uppdatera" />
+        <input type="submit" value="Skapa dokument" />
     </form>
 <%- include('includes/footer'); %>
