Added Home/start button

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>SSR Editor</h1>
+        <u><a href="/"><p>Start</p></a></u>
         <u><a href="/createdoc"><p>Skapa nytt dokument</p></a></u>
     </header>
     <main class="main" id="main">
