Updating doc feature added

--- a/views/doc.ejs
+++ b/views/doc.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/header'); %>
     <h2>Dokument</h2>
-    <form method="POST" action="/" class="new-doc">
+    <form method="POST" action="/<%= doc.id %>?_method=PUT" class="new-doc">
         <label for="title">Titel</label>
         <input type="text" name="title" value="<%= doc.title %>" />
 
@@ -9,4 +9,5 @@
 
         <input type="submit" value="Uppdatera" />
     </form>
+
 <%- include('includes/footer'); %>
