--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -18,6 +18,17 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.navbar {
+  background-color: #29b53a;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 230%;
+}
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
