--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -2,43 +2,33 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 
 
 .doclist img {
-  width: 33px;}
+  width: 33px;
+}
 
 .docheader {
   border: grey 2px solid;
+  padding: 0.5em;
 }
+
 .doclist ul h3 {
-display: grid;
-grid-template-columns:  200px 1fr;
-align-items: center;
-gap: 10px;
+  display: grid;
+  grid-template-columns: 400px 1fr 1fr;
+  align-items: center;
+  gap: 10px;
+  padding: 0.5em;
 }
 
 .doclist {
   display: grid;
   border: grey 2px solid;
 }
+
 .navbar {
-  
+
   width: 100%;
   height: 50px;
   display: flex;
@@ -56,7 +46,7 @@ gap: 10px;
   display: flex;
   height: 50px;
   justify-content: center;
-  align-items:center;
+  align-items: center;
   list-style: none;
   width: 100%;
 }
@@ -73,15 +63,6 @@ gap: 10px;
   border: 2px solid black;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
@@ -94,4 +75,32 @@ gap: 10px;
 
 .read-the-docs {
   color: #888;
+}
+
+.docForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.docForm label {
+  font-size: 1.5em;
+  padding: 0.5em;
+}
+
+.docForm input {
+  width: 400px;
+  padding: 0.5em;
+}
+
+.docForm textarea {
+  padding: 0.5em;
+  width: 400px;
+  height: 400px;
+}
+
+.docForm button {
+  margin: 0.5em;
+  padding: 0.5em;
+  font-size: 2em;
+
 }
