--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -116,7 +116,7 @@
   margin: 0.5em;
   padding: 0.5em;
   font-size: 2em;
-  background-color: #242424;
+  background-color: #8b8b8b;
   width: 80px;
   border-radius: 50%;
   margin-left: auto;
