--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -122,3 +122,15 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.alert {
+  border-radius: 25px;
+  border: grey 2px solid;
+  padding: 0.5em;
+}
+
+.closeBtn {
+  background-color: #888;
+  color: black;
+  margin-right: auto;
+}
