--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -5,6 +5,11 @@
   padding: 2rem;
 }
 
+h2 {
+  font-family: Arial, sans-serif;
+  font-weight: 400;
+}
+
 
 .doclist img {
   width: 33px;
@@ -120,6 +125,7 @@
   height: 400px;
   border-radius: 25px;
   border: grey 2px solid;
+  margin-bottom: 25px;
 }
 
 .docForm button {
@@ -196,7 +202,7 @@
 }
 
 CommentSection {
-  width: 25%;
+  width: 30%;
   padding: 1rem;
 }
 
@@ -207,11 +213,13 @@ CommentSection {
 
 .closebtn {
   float: right;
-
+  padding: 0.5em;
+  border: grey 1px solid;
 }
 
 .commentBox {
   padding: 1em;
+  padding-top: 0.5em;
   border-radius: 25px;
   font-size: 1em;
   border: grey 2px solid;
