--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -128,7 +128,7 @@ h2 {
   margin-bottom: 25px;
 }
 
-.docForm button {
+.docFormBtn {
   margin: 0.5em;
   padding: 0.5em;
   font-size: 2em;
@@ -234,5 +234,31 @@ CommentSection {
 
 .radioButton input {
   width: 50px;
+}
 
+.runbtn {
+  padding: 0.5em;
+  background-color: #888;
+  color: black;
+  height: 50px;
+  margin: 1em;
+
+}
+
+.console {
+  height: 300px;
+  width: 200px;
+  float: left;
+  border: grey 2px solid;
+  border-radius: 25px;
+  padding: 1em;
+  background: #1E1E1E;
+}
+
+.consoleColumn {
+  width: 30%;
+}
+
+.editor {
+  margin-bottom: 1em;
 }
