--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -148,7 +148,7 @@ h2 {
 .closeBtn {
   background-color: #888;
   color: black;
-  margin-left: 300px;
+  margin: 1em;
 }
 
 .login {
@@ -261,4 +261,10 @@ CommentSection {
 
 .editor {
   margin-bottom: 1em;
+}
+
+.shareBox {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
