Prettier print in console-div

--- a/frontend/jsramverk-frontend/src/App.css
+++ b/frontend/jsramverk-frontend/src/App.css
@@ -122,7 +122,7 @@ h2 {
 .docForm textarea {
   padding: 1em;
   width: 600px;
-  height: 400px;
+  height: 600px;
   border-radius: 25px;
   border: grey 2px solid;
   margin-bottom: 25px;
@@ -253,6 +253,7 @@ CommentSection {
   border-radius: 25px;
   padding: 1em;
   background: #1E1E1E;
+  white-space: pre-line;
 }
 
 .consoleColumn {
